2007-01-17

	* libsylph/virtual.c: fixed virtual class structure.

2007-01-17

	* libsylph/mh.c
	  libsylph/folder.[ch]
	  libsylph/news.c
	  libsylph/prefs_account.[ch]
	  libsylph/imap.c
	  src/inc.c: implemented the automatic filtering of IMAP4 INBOX
	  folder.
	  folder_item_get_uncached_msg_list(): new API.

2007-01-17

	* src/about.[ch]
	  README
	  README.ja
	  COPYING: modified the copyright year.

2007-01-17

	* libsylph/codeconv.c: conv_encode_header(): force output of UTF-8
	  if code conversion failed.

2007-01-16

	* libsylph/procmsg.c: procmsg_open_data_file(): fixed a bug that the
	  version of a data file was not checked when the file couldn't be
	  opened with EACCES and reopened.

2007-01-15

	* libsylph/utils.c: get_rc_dir(): win32: use SHGetFolderPath() instead
	  of using environmental variable APPDATA. 

2007-01-15

	* libsylph/utils.c: get_domain_name(): win32: return correct domain
	  name (if possible).

2007-01-12

	* src/account_dialog.c: account_edit_create(): place edit account
	  window at the center of parent window.

2007-01-12

	* libsylph/utils.c
	  libsylph/codeconv.c: conv_encode_header(): handle quote correctly
	  (fixes stray quote character appearing after encoding mail headers).

2007-01-11

	* libsylph/procmime.c: procmime_parse_mime_parameter(): allow spaces
	  around equals between name and value of MIME parameters.

2007-01-11

	* libsylph/prefs_common.[ch]
	  src/trayicon.c
	  src/prefs_common_dialog.c: added the option to toggle window on
	  trayicon click.

2007-01-11

	* libsylph/ssl.c: find_certs_file(): also look for "ca-root.crt".

2006-12-28

	* libsylph/mbox.c: proc_mbox(): filter junk mails when
	  filter_junk_on_recv is enabled.

2006-12-28

	* configure.in: check additional libraries (resolv, socket, nsl)
	  (fixes compilation failure in some OSes).

2006-12-28

	* libsylph/imap.c: imap_cmd_fetch(): read until last response on
	  error (fixes out of sync response).

2006-12-28
