@@ -6,7 +6,7 @@ PACKAGE=sylpheed
 dnl version number
 MAJOR_VERSION=2
 MINOR_VERSION=3
-MICRO_VERSION=0
+MICRO_VERSION=99
 INTERFACE_AGE=0
 BINARY_AGE=0
 EXTRA_VERSION=+svn
