@@ -1,5 +1,12 @@
 2007-01-17
 
+	* libsylph/filter.c: filter_apply_msginfo(): return immediately if
+	  procmsg_get_message_file() failed.
+	* libsylph/imap.c: imap_get_msg_list_full(): return NULL if
+	  uncached_only.
+
+2007-01-17
+
 	* libsylph/virtual.c: fixed virtual class structure.
 
 2007-01-17
